--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -131,7 +131,7 @@
 
         <Table
           *ngIf="userAccount && userAccount.transactions"
-          class="table table-hover"
+          class="table table-hover" style="width: 100%;"
         >
           <thead>
             <tr>
