--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,6 +88,8 @@
       <h2>Welcome, <span class="text-primary">{{ details?.username }}</span>!</h2>
       <p>
         You may perform account changes as given below.
+        <br>
+        To logout, please use the 'Actions' menu in the top right corner.
       </p>
     </div>
 
