--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,7 +29,7 @@
             <li class="nav-item dropdown" >
               <a
                 class="nav-link dropdown-toggle"
-                href="http://example.com"
+                href="/home"
                 id="navbarDropdownMenuLink"
                 data-toggle="dropdown"
                 aria-haspopup="true"
@@ -40,7 +40,7 @@
               <div
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdown"
-                [ngStyle]="{ background: 'black' }"
+                [ngStyle]="{ background: 'lightgrey' }"
               >
                 <a
                   class="dropdown-item"
@@ -57,7 +57,6 @@
                   (click)="logout()"
                   ><i class="fas fa-sign-out-alt"></i> Logout</a
                 >
-
               </div>
             </li>
           </ul>
